# MathMind

./: .gitignore  README.md  agents.py  fetch_arxiv.py  ingest.py  main.py  pyproject.toml  requirements_streamlit.txt  retriever.py  streamlit_app.py
index/: meta.pkl  symbol_index.json
papers/: papers_metadata.csv  topicTable.txt
papers/AlgebraicGeometry/: AG_metadata.csv
papers/AlgebraicGeometry/index/: meta.pkl  symbol_index.json
papers/AlgebraicGeometry/latex_sources/2511.03440v1/: 00README.json  Appendix.tex  Applications.tex  Introduction.tex  TechnicalOverview.tex  abstract.tex  acknowledgments.tex  main_arxiv.bbl  main_arxiv.tex  preamble.tex  preliminaries.tex  structure.tex
papers/AlgebraicGeometry/latex_sources/2511.03454v1/: 00README.json  HilbertSchemesPaperTEX.tex  bib.bib
papers/AlgebraicGeometry/latex_sources/2511.03458v1/: main.tex
papers/AlgebraicGeometry/latex_sources/2511.03519v1/: 00README.json  BWB_Quot_arXiv.tex  alphnum.bst  ref.bib
papers/AlgebraicGeometry/latex_sources/2511.03526v1/: 00README.json  no-d-on-Q-quadric.bbl  no-d-on-Q-quadric.tex
papers/AlgebraicGeometry/latex_sources/2511.03530v1/: 00README.json  arxiv_V1.bbl  arxiv_V1.tex
papers/AlgebraicGeometry/latex_sources/2511.03649v1/: 00README.json  heisvect.bbl  heisvect.tex  macros.tex
papers/AlgebraicGeometry/latex_sources/2511.03885v1/: biblio.bib  main.tex  section1.tex  section2.tex  section3.tex
papers/AlgebraicGeometry/latex_sources/2511.04134v1/: 00README.json  Jointdeformation.tex
papers/AlgebraicGeometry/latex_sources/2511.04191v1/: 00README.json  S251.tex  defn.tex
papers/AlgebraicGeometry/latex_sources/2511.04229v1/: 00README.json  ReJacobi_e.tex
papers/AlgebraicGeometry/latex_sources/2511.04326v1/: 00README.json  main_11.tex  ref.bib  tran-l.cls
papers/AlgebraicGeometry/latex_sources/2511.04405v1/: 00README.json  GGL_conjecture.tex
papers/AlgebraicGeometry/latex_sources/2511.04462v1/: 00README.json  GeMax.tex
papers/AlgebraicGeometry/latex_sources/2511.04498v1/: main.bbl  main.tex
papers/AlgebraicTopology/index/: meta.pkl  symbol_index.json
papers/Algebraic_Topology/: AT_metadata.csv
papers/CommutativeAlgebra/: CA_metadata.csv
papers/CommutativeAlgebra/index/: meta.pkl  symbol_index.json
papers/GeneralMathematics/: GM_metadata.csv
papers/GeneralMathematics/index/: meta.pkl  symbol_index.json
papers/GeneralTopology/: GT_metadata.csv
papers/GeneralTopology/index/: meta.pkl  symbol_index.json
papers/GroupTheory/: GR_metadata.csv
papers/GroupTheory/index/: meta.pkl  symbol_index.json
papers/KTheoryAndHomology/: KT_metadata.csv
papers/KTheoryAndHomology/index/: meta.pkl  symbol_index.json
papers/NumberTheory/: NT_metadata.csv
papers/NumberTheory/index/: meta.pkl  symbol_index.json
papers/RepresentationTheory/: RT_metadata.csv
papers/RepresentationTheory/index/: meta.pkl  symbol_index.json
papers/RingsAlgebras/: RA_metadata.csv
papers/RingsAlgebras/index/: meta.pkl  symbol_index.json
(+533 files in other folders)
