[tool.poetry]
name = "multiagents"
version = "0.1.0"
description = "A multi-agent system for number theory research with semantic search and symbolic reasoning"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
langchain = "^0.1.0"
langchain-community = "^0.0.38"
langchain-openai = "^0.0.8"
langchain-text-splitters = "^0.0.1"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
numpy = "^1.24.0"
pypdf = "^3.17.0"
openai = "^1.0.0"
python-dotenv = "^1.2.1"
crewai = "*"
streamlit = "^1.51.0"
plotly = "^6.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
ingest = "ingest:build_indices"
run-session = "run_session:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

