[tool.poetry]
name = "mathind"
version = "1.0.0"
description = "Collaborative AI Mathematical Proof System - Multi-agent architecture for generating and verifying mathematical conjectures"
authors = ["saisneha, umamaheswar"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/MathMind"
repository = "https://github.com/yourusername/MathMind"
keywords = ["mathematics", "AI", "proof-system", "crewai", "streamlit"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

# Core Streamlit
streamlit = ">=1.28.0"

# Visualization
plotly = ">=5.17.0"
networkx = ">=3.1"
matplotlib = ">=3.7.0"

# Data handling
pandas = ">=2.0.0"
numpy = ">=1.24.0"

# AI/ML Framework
crewai = ">=0.30.0"
langchain = ">=0.1.0"
langchain-openai = ">=0.0.8"

# Vector search
faiss-cpu = "1.10.0"

# Environment and utilities
python-dotenv = ">=1.0.0"

# Embeddings
sentence-transformers = ">=2.2.2"

# arXiv integration
arxiv = ">=2.3.0"

# Google Generative AI (optional for markdown reports)
google-generativeai = {version = ">=0.3.0", optional = true}

# Real-time features
streamlit-autorefresh = ">=0.0.1"
watchdog = ">=3.0.0"

[tool.poetry.extras]
genai = ["google-generativeai"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mathind-streamlit = "streamlit run streamlit_app:app"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | myenv
  | papers
  | index
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
